--- a/src/scss/sections/_masthead.scss
+++ b/src/scss/sections/_masthead.scss
@@ -12,7 +12,8 @@ header.masthead {
     background: linear-gradient(to bottom,
         #{fade-out($brown, 0.2)} 0%,
         #{fade-out($brown, 0.2)} 100%),
-    url("../assets/img/bg-masthead.jpg");
+        url(melsoft.jpg)
+    
 
     background-position: center;
     background-repeat: no-repeat;
